feat: 技能系统优化、穿透射击修复、Boss子弹射程翻倍、怪物绕行树木

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,8 +30,7 @@
   },
   "include": [
     "client/src",
-    "client/index.html",
-    "vite.config.ts"
+    "client/index.html"
   ],
   "exclude": [
     "node_modules",
