--- a/package.json
+++ b/package.json
@@ -26,16 +26,11 @@
   "license": "MIT",
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "d3": "^7.9.0",
-    "mitt": "^3.0.1",
-    "modern-screenshot": "^4.4.51",
-    "@zumer/snapdom": "^0.8.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/d3": "^7.4.3",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "@vitejs/plugin-react": "^4.3.4",
