--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist/public",
+  "outputDirectory": "client/dist/public",
   "installCommand": "npm install",
   "framework": "vite",
   "rewrites": [
